[tool.poetry]
name = "pybem"
version = "0.1.0"
description = ""
authors = ["Paul Reiter <reiter.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
