[tool.poetry]
name = "pybem"
version = "0.3.0"
description = "A Boundary Element Method (BEM) implementation in python."
authors = ["Paul Reiter <reiter.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.19"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
